infrastructure/aws/cloudformation/csye6225-cf-application.json
{
   "AWSTemplateFormatVersion":"2010-09-09",
   "Description":"Infrastructure Setup using CloudFormation-Application Stack",
   "Parameters":{
      "AppName":{
         "Type":"String"
      },
      "NetworkName":{
         "Type":"String"
      },
      "SSHKeyName":{
         "Type":"String"
      },
      "AMI":{
         "Type":"String"
      }
   },
   "Resources":{
      "WebAppSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupName":{
               "Fn::Sub":"${AppName}-WebAppSecurityGroup"
            },
            "GroupDescription":"Create WebApp Security Group",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${AppName}-WebAppSecurityGroup"
                  }
               }
            ],
            "SecurityGroupIngress":[
               {
                  "IpProtocol":"tcp",
                  "CidrIp":"0.0.0.0/0",
                  "FromPort":22,
                  "ToPort":22
               },
               {
                  "IpProtocol":"tcp",
                  "CidrIp":"0.0.0.0/0",
                  "FromPort":80,
                  "ToPort":80
               },
               {
                  "IpProtocol":"tcp",
                  "CidrIp":"0.0.0.0/0",
                  "FromPort":443,
                  "ToPort":443
               }
            ],
            "VpcId":{
               "Fn::ImportValue":{
                  "Fn::Sub":"${NetworkName}-VPCID"
               }
            }
         }
      },
      "RDSSecurityGroup":{
         "Type":"AWS::EC2::SecurityGroup",
         "Properties":{
            "GroupName":{
               "Fn::Sub":"${AppName}-RDSSecurityGroup"
            },
            "GroupDescription":"Create RDS SG",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${AppName}-RDSSecurityGroup"
                  }
               }
            ],
            "SecurityGroupIngress":{
               "IpProtocol":"tcp",
               "FromPort":"3306",
               "ToPort":"3306",
               "SourceSecurityGroupId":{
                  "Ref":"WebAppSecurityGroup"
               }
            },
            "VpcId":{
               "Fn::ImportValue":{
                  "Fn::Sub":"${NetworkName}-VPCID"
               }
            }
         }
      },
      "ec2Instance":{
         "Type":"AWS::EC2::Instance",
         "DependsOn":"DBServer",
         "Properties":{
            "ImageId":{
               "Ref":"AMI"
            },
         "BlockDeviceMappings" : [
         {
            "DeviceName" : "/dev/sdm",
            "Ebs" : {
              "VolumeType" : "gp2",
              "DeleteOnTermination" : "true",
              "VolumeSize" : "20"
            }
          } 
         ],
            "SubnetId":{
               "Fn::ImportValue":{
                  "Fn::Sub":"${NetworkName}-PublicSubnet1"
               }
            },
	    
            "InstanceType":"t2.micro",
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${AppName}-EC2Instance"
                  }
               }
            ],
            "KeyName":{
               "Ref":"SSHKeyName"
            },
            "SecurityGroupIds":[
               {
                  "Ref":"WebAppSecurityGroup"
               }
            ]
         }
      },
      "DBServer":{
         "Type":"AWS::RDS::DBInstance",
         "Properties":{
            "DBInstanceIdentifier":"csye6225-su19",
	    "AllocatedStorage":10,
            "DBName":"csye6225",
            "DBInstanceClass":"db.t2.medium",
            "MultiAZ":"false",
            "Engine":"MySQL",
            "MasterUsername":"csye6225master",
            "MasterUserPassword":"csye6225password",
            "DBSubnetGroupName":{
               "Ref":"DBSubnetGroup"
            },
            "PubliclyAccessible":"true",
            "VPCSecurityGroups":[
               {
                  "Ref":"RDSSecurityGroup"
               }
            ]
         }
      },
      "DBSubnetGroup":{
         "Type":"AWS::RDS::DBSubnetGroup",
         "Properties":{
            "DBSubnetGroupDescription":"Included two Subnet- PublicSubnet2, PublicSubnet3",
            "SubnetIds":[
               {
                  "Fn::ImportValue":{
                     "Fn::Sub":"${NetworkName}-PublicSubnet2"
                  }
               },
               {
                  "Fn::ImportValue":{
                     "Fn::Sub":"${NetworkName}-PublicSubnet3"
                  }
               }
            ],
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${AppName}-DBSubnetGroup"
                  }
               }
            ]
         }
      },
      "DynamoDBTable":{
         "Type":"AWS::DynamoDB::Table",
         "Properties":{
            "AttributeDefinitions":[
               {
                  "AttributeName":"Id",
                  "AttributeType":"S"
               }
            ],
            "KeySchema":[
               {
                  "AttributeName":"Id",
                  "KeyType":"HASH"
               }
            ],
            "TableName":"csye6225",
	     "ProvisionedThroughput":{
               "ReadCapacityUnits":"5",
               "WriteCapacityUnits":"5"
            },
            "Tags":[
               {
                  "Key":"Name",
                  "Value":{
                     "Fn::Sub":"${AppName}-DynamoDBTable"
                  }
               }
            ]
         }
      }
   }
}
